installed mysql and connected to spring, created model, created methods

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,12 @@
+# by default port is 8080
+server.port = 8080
 
+# mode of working with DB. Update - is common to use. We can read, update, add notes to DB
+spring.jpa.hibernate.ddl-auto=update
+
+# we use standard java JDBC technology to connect to DB
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/budget
+spring.datasource.username=family
+spring.datasource.password=1111
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+#spring.jpa.show-sql: true
